intruder-FE/src/app/window/window.component.css
/* .header{
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: 10%;
  margin: auto;
} */

/* html
body{
  height: 100vh;
  width: 100vw; 
} */
canvas{
  border: solid black 1px;
  height: 100%;
  width : 100%;
  
  
  /* position: relative;
  display: block; */
}
.main-container{
 margin: 20px auto;
 margin-bottom: 0;
  width: 90vw;
  height: 90vh;
  
  display:grid;
  grid-template-columns: 70% 1fr;
  grid-template-rows: auto;
  grid-template-areas: ". .";
  grid-column-gap: 10px;
  
}
#alarm {
  background: 	#dddddd	;
  border: black 1px solid;
  
  position: relative;
}


#areaContainer{
  box-shadow: 0 0 4px 4px rgba(0, 0, 0, 0.08);
  height: 100%;
  width: 100%;
  position: relative;
}

.warning-sign {
 
  height: 80px;
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
}

.warning-text{
  text-align: center;
  display: inline-block;
  width: 100%;
  color: red

}




.bottom-element{
  position: absolute;
  bottom: 20%;
  width: 100%;
}

#bottom-text{

}
/* .redLegendCss {
  width: 15px;
  height: 15px;
  border-radius: 100%;
  margin: auto;
  background-color: red;
} */

